fix filter items alignment and make area between input and label clickable

--- a/app/assets/stylesheets/components/filters.scss
+++ b/app/assets/stylesheets/components/filters.scss
@@ -3,6 +3,8 @@
 //**************************************************
 $activeBackgroundColour: $primary;
 $activeTextColour: white;
+$checkbox-height: rem-calc(22);
+$focus-outline-margin: rem-calc(4);
 
 //**************************************************
 // filters
@@ -105,6 +107,7 @@ $activeTextColour: white;
     }
 
     &-list {
+      padding: $focus-outline-margin;
       margin-bottom: rem-calc(20);
       max-height: $filters-menu-max-height;
       overflow-y: scroll;
@@ -135,7 +138,6 @@ $activeTextColour: white;
     &__option {
       font-size: rem-calc(16);
       margin-bottom: rem-calc(16);
-      padding: rem-calc(0 20 0 38);
       width: 100%;
 
       display: block;
@@ -150,7 +152,8 @@ $activeTextColour: white;
       &__checkbox {
         border: solid rem-calc(1) $grey;
         cursor: pointer;
-        width: rem-calc(22); height: rem-calc(22);
+        margin: 0;
+        width: $checkbox-height; height: $checkbox-height;
 
         -webkit-appearance: none;
         -moz-appearance: none;
@@ -158,7 +161,6 @@ $activeTextColour: white;
 
         display: block;
         position: absolute;
-        top: rem-calc(-2);
         left: 0;
 
         &--active:after {
@@ -170,7 +172,10 @@ $activeTextColour: white;
         }
       }
 
-      &_checkbox-label {
+      &__checkbox-label {
+        line-height: $checkbox-height;
+        padding: rem-calc(0 20 0 38);
+
         display: inline-block;
       }
 
